Add Vertex AI provider for gen ai plugin text completion